@@ -55,6 +55,8 @@ Extension modules
 Library
 -------
 
+- tmpfile.mkstemp now returns an absolute path even if dir is relative.
+
 - urlparse is RFC 2396 compliant.
 
 - The fieldnames argument to the csv module's DictReader constructor is now
